--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 .nombre {
   width: 62%;
 }
@@ -50,7 +8,7 @@
   width: 29%;
 }
 .marca {
-  width: 30%;
+  width: 31%;
 }
 .modelo {
   width: 30%;
@@ -65,6 +23,11 @@
   
   
 }
+.sub_lista {
+  text-align: left;
+  font-size: 25px;
+}
+
 .subtitulo2 {
   text-align: left;
   font-size: 20px;
@@ -80,11 +43,28 @@
   
   
 }
-.laptop {
-  position: relative;
- 
-  transform: scale(3);
+.botones-navbar{
+  display: flex;
+  justify-content: end;
+  width: 75%;
+  margin: auto;
+  padding: 1vh;
   
-  left: 700px;
-  top: -135px;
+}
+
+.formulario-header{
+  display: flex;
+  width: 100%;
+  overflow: visible;
+  border-bottom: 3px solid rgba(128, 128, 128, 0.1);
+
+}
+
+
+.formulario_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
